Display and overflow fixed

--- a/src/components/Hero.scss
+++ b/src/components/Hero.scss
@@ -5,7 +5,6 @@
     height: 100vh;
     width: 100vw;
     background-image: url('../assets/pexels-александар-цветановић-1422292.jpg');
-    position: relative;
     background-size: cover;
     position: relative;
     &::after {
