--- a/src/index.scss
+++ b/src/index.scss
@@ -31,7 +31,9 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+  margin: 0;
 }
+
 
 
 a {
@@ -44,14 +46,16 @@ a:hover {
   color: #535bf2;
 }
 
-body {
-  margin: 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
+ body {
+   padding: 0;
+   margin: 0;
+   display: flex;
+  //  justify-content: center;
+  //  align-items: center;
+  //  // min-width: 320px;
+  //  min-height: 100vh;
+  //  overflow-x: hidden;
+ }
 
 h1 {
   font-size: 3.2em;
@@ -68,6 +72,7 @@ button {
   background-color: #1a1a1a;
   cursor: pointer;
   transition: border-color 0.25s;
+  text-align: center;
 }
 
 button:hover {
